1st online 2.15 Signed-off-by: gaofeng <gaofeng3695@126.com>

--- a/enroll.html
+++ b/enroll.html
@@ -3,9 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>巡线卫士_互联网+管道_管道巡线_管线巡检_管线安全管理</title>
+    <meta name="description" content="巡线卫士是一款为管线安全生产管理提供支撑的移动应用软件，通过云端巡检、闭环管理和移动互联，能够实时监控巡检动态、优化巡检流程，从而提高管线管理工作的效率。">
+    <meta name="Keywords" content="管道,巡检,巡线,管线安全">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link href="/src/css/enroll.css" rel="stylesheet">
     <link href="/src/css/loginCommon.css" rel="stylesheet">
 </head>
@@ -35,7 +38,7 @@
                         </div>
                         <div class="one">
                             <div class="left1 fl"><span class="color">*</span>短信验证码：</div>
-                            <div class="center1 fl" style="position:relative"><input class="SMScode" type="text" placeholder="&nbsp;请输入短信验证码"><button class="styles">发送短信验证码</button></div>
+                            <div class="center1 fl" style="position:relative"><input class="SMScode" type="text" placeholder="&nbsp;请输入短信验证码"><button class="styles">获取短信验证码</button></div>
                             <div class="right1 SMScodeMsg fl"><span>验证码填写错误</span></div>
                         </div>
                         <div class="btn1"><input type="button" name="" value="下一步"></div>
@@ -103,17 +106,18 @@
                         <div class="btn4" style="margin-top:60px;"><input type="button" name="" value="完成"></div>
                     </div>
                 </div>
-                <div class="Notes">注册表示您同意<a href="">《服务协议》</a>和<a href="">《隐私政策》</a></div>
+                <div class="Notes">注册表示您同意<a href="/src/html/service.html" target="_blank">《服务协议》</a>和<a href="/src/html/private.html" target="_blank">《隐私政策》</a></div>
             </div>
         </div>
         <p class="words">北京中盈安信技术服务股份有限公司旗下网站：巡线卫士<span>©</span>2016 京 B2-20080224-16</p>
     </div>
     <script src="/lib/js/jquery-1.12.4.min.js"></script>
     <script src="/lib/js/bootstrap.min.js"></script>
-    <script src="/src/js/login/enroll.js"></script>
     <script src="/src/js/common/html5-storage.js"></script>
     <script src="/src/js/common/md5.js"></script>
     <script src="/src/js/common/bootstrap.modal.alert.js"></script>
+    <script src="/src/js/common/zhuge.js"></script>
+    <script src="/src/js/login/enroll.js"></script>
     <script>
     </script>
 </body>
