--- a/login.html
+++ b/login.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <head>
-    <title></title>
     <meta charset="UTF-8">
+    <title>巡线卫士_互联网+管道_管道巡线_管线巡检_管线安全管理</title>
+    <meta name="description" content="巡线卫士是一款为管线安全生产管理提供支撑的移动应用软件，通过云端巡检、闭环管理和移动互联，能够实时监控巡检动态、优化巡检流程，从而提高管线管理工作的效率。">
+    <meta name="Keywords" content="管道,巡检,巡线,管线安全">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link href="/src/css/login.css" rel="stylesheet">
 </head>
 
@@ -30,8 +33,8 @@
                     </div>
                     <button class="btn">登&nbsp;&nbsp;录</button>
                     <div class="Twobtn">
-                        <a href="forget.html"><button class="forget">忘记密码</button></a>
-                        <a href="enroll.html"><button class="immediately">立即注册</button></a>
+                        <a href="forget.html"><button class="forget" onclick="zhuge.track('点击忘记密码'); ">忘记密码</button></a>
+                        <a href="enroll.html"><button class="immediately" onclick="zhuge.track('点击立即注册'); ">立即注册</button></a>
                     </div>
                 </div>
             </div>
@@ -42,6 +45,7 @@
     <script src="/lib/js/bootstrap.min.js"></script>
     <script src="/src/js/common/md5.js"></script>
     <script src="/src/js/common/html5-storage.js"></script>
+    <script src="/src/js/common/zhuge.js"></script>
     <script src="/src/js/login/login.js"></script>
     <script>
     </script>
