--- a/main.html
+++ b/main.html
@@ -2,14 +2,17 @@
 <html lang="en">
 
 <head>
-    <title></title>
     <meta charset="UTF-8">
+    <title>巡线卫士_互联网+管道_管道巡线_管线巡检_管线安全管理</title>
+    <meta name="description" content="巡线卫士是一款为管线安全生产管理提供支撑的移动应用软件，通过云端巡检、闭环管理和移动互联，能够实时监控巡检动态、优化巡检流程，从而提高管线管理工作的效率。">
+    <meta name="Keywords" content="管道,巡检,巡线,管线安全">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <link href="/lib/css/bootstrap.css" rel="stylesheet">
     <link href="/lib/css/font-awesome.min.css" rel="stylesheet">
     <link href="/src/css/jasxxws.css" rel="stylesheet">
     <link href="/src/css/topnav.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/favicon.ico" />
 </head>
 
 <body>
@@ -23,9 +26,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="/src/images/main/icon_logo.png">
+                    <!--<img src="/src/images/main/icon_logo.png">
                     <span>巡线卫士</span>
-                    <img src="/src/images/main/logo_desc.png">
+                    <img src="/src/images/main/logo_desc.png">-->
                     <!--<span class="new_company" id="new_company">
                     </span>-->
                 </a>
@@ -53,14 +56,14 @@
                 </li>-->
                 <li class="help" menuId="help">
                     <div class="leftLine"></div>
-                    <a href="#/help" title="帮助中心" style="height:50px;">
+                    <a href="#/help" title="帮助中心" style="height:60px;">
                         <img src="/src/images/main/help.png">
                         <h1>
                     </a>
                 </li>
                 <li class="help" menuId="signOut">
                     <div class="leftLine"></div>
-                    <a href="#" title="注销登录" style="height:50px;">
+                    <a href="#" title="注销登录" style="height:60px;">
                         <img src="/src/images/main/signOut.png">
                         <h1>
                     </a>
@@ -75,7 +78,7 @@
                         <a href="#/event"><i class="fa fa-fw fa-list-ul"></i> 事件管理</a>
                     </li>
                     <li menuid="task">
-                        <a href="#/task"><i class="fa fa-fw fa-file"></i> 任务管理</a>
+                        <a href="#/task"><i class="fa fa-fw fa-file-text-o"></i> 任务管理</a>
                     </li>
                     <li>
                         <a href="#/map"><i class="fa fa-fw fa-map-marker"></i> 一张图</a>
@@ -86,11 +89,12 @@
                     <li>
                         <a href="#/equipment"><i class="fa fa-fw fa-wrench"></i> 设备管理</a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a href="#/statistics"><i class="fa fa-fw fa-bar-chart-o"></i> 统计分析</a>
-                    </li>
+                    </li>-->
                     <li>
-                        <a href="#/management" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-briefcase"></i> 企业管理 <i class="fa fa-fw fa-caret-down"></i></a>
+                        <a href="#/management" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-briefcase"></i> 企业管理 </a>
+                        <!--<a href="#/management" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-briefcase"></i> 企业管理 <i class="fa fa-fw fa-caret-down"></i></a>-->
                         <!--<ul id="demo" class="collapse">
                             <li>
                                 <a href="#">Dropdown Item</a>
@@ -100,9 +104,9 @@
                             </li>
                         </ul>-->
                     </li>
-                    <li>
+                    <!--<li>
                         <a href="#/news"><i class="fa fa-fw fa-envelope"></i>消息中心</a>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
         </nav>
@@ -115,6 +119,7 @@
     <script src="/lib/js/director.min.js"></script>
     <script src="/lib/js/bootstrap.min.js"></script>
     <script src="src/js/common/html5-storage.js"></script>
+    <script src="src/js/common/zhuge.js"></script>
     <script src="src/js/main.js"></script>
 </body>
 
