--- a/src/html/help.html
+++ b/src/html/help.html
@@ -52,60 +52,107 @@
                         <div class="row kuai1" style="display:block;">
                             <div class="changeOne">
                                 <div class="comcss">
-                                    <h1>新用户如何加入到所在企业使用巡线卫士？</h1>
+                                    <h1>1. Q：新用户如何加入到所在企业使用巡线卫士？</h1>
                                     <p>加入步骤如下：</p>
-                                    <ul>
+                                    <ul style="margin-top:10px;">
                                         <li>新用户可联系所在企业的系统管理员，申请被邀请注册。</li>
-                                        <li>关注微信公众号“pipelinehome”，点击“App应用－App下载”，扫描二维码下载。或进入安卓应用市场（如应用宝、豌豆荚），下载安装“巡线卫士”。</li>
-                                        <li>打开巡线卫士，在登录界面中输入邀请短信中的登录账号和初始密码，登录巡线卫士即可使用。</li>
+                                        <li>打开浏览器网址输入https://xxws.zyax.cn，在页面的右上角点击登陆，进入登录界面。</li>
+                                        <li>在登录界面中输入邀请短信中的登录账号和初始密码，登录巡线卫士即可使用。</li>
                                     </ul>
                                 </div>
                                 <div class="comcss">
-                                    <h1>新用户如何加入到所在企业使用巡线卫士？</h1>
-                                    <p>加入步骤如下：</p>
-                                    <ul>
-                                        <li>新用户可联系所在企业的系统管理员，申请被邀请注册。</li>
-                                        <li>关注微信公众号“pipelinehome”，点击“App应用－App下载”，扫描二维码下载。或进入安卓应用市场（如应用宝、豌豆荚），下载安装“巡线卫士”。</li>
-                                        <li>打开巡线卫士，在登录界面中输入邀请短信中的登录账号和初始密码，登录巡线卫士即可使用。</li>
-                                    </ul>
-                                </div>
-                                <div class="comcss">
-                                    <h1>新用户如何加入到所在企业使用巡线卫士？</h1>
-                                    <p>加入步骤如下：</p>
-                                    <ul>
-                                        <li>新用户可联系所在企业的系统管理员，申请被邀请注册。</li>
-                                        <li>关注微信公众号“pipelinehome”，点击“App应用－App下载”，扫描二维码下载。或进入安卓应用市场（如应用宝、豌豆荚），下载安装“巡线卫士”。</li>
-                                        <li>打开巡线卫士，在登录界面中输入邀请短信中的登录账号和初始密码，登录巡线卫士即可使用。</li>
-                                    </ul>
-                                </div>
-                                <div class="comcss">
-                                    <h1>新用户如何加入到所在企业使用巡线卫士？</h1>
-                                    <p>加入步骤如下：</p>
-                                    <ul>
-                                        <li>新用户可联系所在企业的系统管理员，申请被邀请注册。</li>
-                                        <li>关注微信公众号“pipelinehome”，点击“App应用－App下载”，扫描二维码下载。或进入安卓应用市场（如应用宝、豌豆荚），下载安装“巡线卫士”。</li>
-                                        <li>打开巡线卫士，在登录界面中输入邀请短信中的登录账号和初始密码，登录巡线卫士即可使用。</li>
-                                    </ul>
-                                </div>
-                                <div class="comcss">
-                                    <h1>如果误删了邀请注册短信，怎么办？</h1>
-                                    <p>进入巡线卫士登录页面，点击左下角“忘记密码”，跳转至“找回密码”页面，输入收到邀请注册短信的手机号，重新设置密码登录即可。</p>
-                                </div>
-                                <div class="comcss">
-                                    <h1>创建企业时，企业名称已被注册怎么办？</h1>
+                                    <h1>2. Q：创建企业时，企业名称已被注册怎么办？</h1>
                                     <p>建议暂时使用其他名称注册，并请尽快完成企业认证，认证通过后，即可拥有企业名称的唯一使用权。</p>
                                 </div>
                                 <div class="comcss">
-                                    <h1>无法正常登录，该如何解决？</h1>
+                                    <h1>3. Q：无法正常登录，该如何解决？</h1>
                                     <p>无法正常登录，可能是以下原因导致：</p>
-                                    <ul>
-                                        <li>您的手机未连接网络，请到手机设置中开启移动数据或连接无线网络，开启网络后重新登录App。</li>
-                                        <li>登录的手机号与注册时的手机号不一致，或密码输入错误。请输入正确的手机号和密码后重新登录。若忘记密码，可在登录页面中点击“忘记密码”，找回密码并重新登录。<br>建议您根据以上情况仔细排查。</li>
+                                    <ul style="margin-top:10px;">
+                                        <li>登录账号输入错误或密码输入错误。请输入正确的手机号和密码后重新登录。</li>
+                                        <li>若忘记密码，可在登录页面中点击“忘记密码”，找回密码并重新登录。</li>
+                                        <li>若登陆名和密码都没有问题，请直接联系客服人员为您处理。</li>
+                                    </ul>
+                                </div>
+                                <div class="comcss">
+                                    <h1>4. Q：注册时手机没有收到验证码怎么办？</h1>
+                                    <p>手机收不到验证码，可能是以下原因导致：</p>
+                                    <ul style="margin-top:10px;">
+                                        <li>由于手机安全软件拦截，验证码短信可能被拦截进了垃圾箱，请打开垃圾箱查看。</li>
+                                        <li>由于运营商通道故障造成了短信发送时间延迟，请耐心等候片刻或点击重新获取验证码。</li>
+                                        <li>核实您的手机是否处于能够正常接收短信的状态，停机、欠费或短信箱存储已满的状态是不能够收到短信的。<br><b>建议您根据以上情况仔细排查。</b></li>
+                                    </ul>
+                                </div>
+                                <div class="comcss">
+                                    <h1>5. Q：事件和任务有什么区别？</h1>
+                                    <p>区别如下：</p>
+                                    <ul style="margin-top:10px;">
+                                        <li>事件：在巡线过程中发现的异常情况，包括第三方活动、自然灾害、管道设施三种类型。</li>
+                                        <li>在“事件管理”中，用户可浏览企业所有人报送的事件。若新建事件不报送，则事件关闭；若报送，则事件自动转为任务。</li>
+                                        <li>任务：事件发起人将事件报送给自己或他人，事件转变为待办任务。任务的发起人和接收人均为本任务的干系人，干系人可以对任务进行处置，包括记录、请示、意见。</li>
+                                    </ul>
+                                </div>
+                                <div class="comcss">
+                                    <h1>6. Q：如何修改登录账号密码</h1>
+                                    <p>鼠标放置于右上角“用户名称”，点击“个人中心”菜单中的修改密码，可设置新密码。</p>
+                                </div>
+                                <div class="comcss">
+                                    <h1>7. Q：用户状态为“移除”与“账户冻结”有什么区别。</h1>
+                                    <p> “移除”与“账户冻结”存在以下区别：</p>
+                                    <ul style="margin-top:10px;">
+                                        <li> “移除”：将用户完全从企业中删除，企业将不再记录该用户的任何信息。</li>
+                                        <li> “账户冻结”：当遇到特殊情况（如用户手机丢失），可对用户的账户做冻结处理，在冻结期间禁止该用户登录。</li>
+                                    </ul>
+                                </div>
+                                <div class="comcss">
+                                    <h1>8. Q：出现此网站安全证书有问题，打不开怎么办？</h1>
+                                    <p>安全证书是为了保证网络传输过程中数据内容不被窃取和破译，是网站的安全机制。对于IE6（含）以下的用户请选“是”来启用安全方式，IE7用户请选择“继续使用该网站”。</p>
+                                </div>
+                                <div class="comcss">
+                                    <h1>9. Q：事件详情中的事件编号是如何生成的？是否可进行编辑？</h1>
+                                    <p>事件详情中的事件编号是事件上报时自动生成的编号，无法进行编辑。</p>
+                                </div>
+                                <div class="comcss">
+                                    <h1>10. Q：如何查询、修改我的个人信息？</h1>
+                                    <p>修改个人信息操作步骤如下：</p>
+                                    <ul style="margin-top:10px;">
+                                        <li>登录巡线卫士，鼠标放置与右上角用户名，点击“个人管理中”中的“个人资料”。</li>
+                                        <li>您可以在“个人资料”页面查看并修改您的个人信息。</li>
+                                    </ul>
+                                </div>
+                                <div class="comcss">
+                                    <h1>11. Q：观看“一张图”中的轨迹回放时播放卡顿怎么解决？</h1>
+                                    <p>可以尝试以下方式改善轨迹回放播放效果：</p>
+                                    <ul style="margin-top:10px;">
+                                        <li>退出账户，关闭浏览器。</li>
+                                        <li>清空缓存：IE浏览器菜单，再次登录观看。</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <div class="row kuai2" style="text-align:center;margin-top:30px;">操作指南</div>
+                        <div class="row kuai2">
+                            <div class="changeOne">
+                                <div class="comcss">
+                                    <h1>1、如何设置IE浏览器，以优化系统的展示？</h1>
+                                    <p>设置步骤如下：</p>
+                                    <ul style="margin-top:10px;">
+                                        <li>第一步：打开IE浏览器，点击“设置”，弹出如下图所示，然后选中“Internet选项”。</li>
+                                        <img src="/src/images/help/IE1.png" />
+                                        <li>第二步：在弹出的“Internet选项”，点击“设置”，如下图所示。</li>
+                                        <img src="/src/images/help/IE2.png" />
+                                        <li>第三步：在弹出的“网站数据设置”中，选中“每次访问页面时”，结果如下图所示。</li>
+                                        <img src="/src/images/help/IE3.png" />
+                                    </ul>
+                                </div>
+                                <div class="comcss">
+                                    <h1>2、如何设置360浏览器极速模式？</h1>
+                                    <p>设置步骤如下：</p>
+                                    <ul style="margin-top:10px;">
+                                        <li>360存在“极速模式”和“兼容模式”，为了更好的用户体验需要设置为“极速模式”。如下图所示，选中“极速模式”。</li>
+                                        <img src="/src/images/help/361.png" style="width:740px;height:106px;" />
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                         <div class="row kuai3">
                             <!--反馈意见-->
                             <div class="feedback_main">
@@ -141,6 +188,9 @@
                                 <div class="success_text">
                                     <p>提交成功</p>
                                     <p>感谢您对我们提交宝贵的意见！</p>
+                                    <div class="return">
+                                        <button id="fat-btn " class="btn" type="button"> 返回首页</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
