--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,11 +29,11 @@
                     <div class="qtty"><span class="num">--</span><span>人</span></div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-xs-12 box">
-                    <div class="title">本日最新事件</div>
+                    <div class="title">本日新增事件</div>
                     <div class="qtty"><span class="num">--</span><span>起</span></div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-xs-12 box">
-                    <div class="title">本日最新任务</div>
+                    <div class="title">本日新增任务</div>
                     <div class="qtty"><span class="num">--</span><span>起</span></div>
                 </div>
                 <!--<div class="col-lg-3 col-md-6">
@@ -79,7 +79,7 @@
                         <a class="more" href="/main.html#/task">更多 ></a>
                     </div>
                     <div id="task_tip" class="tip">
-                        暂无任务信息
+                        您的待办任务全部搞定啦...
                     </div>
                     <div id="taskList_wrapper" class="wrapper">
                         <!--<div class="line">
@@ -150,11 +150,11 @@
                 </div>
                 <!--事件列表-->
                 <div id="eventList_wrapper" class="col-lg-7 mainbox">
-                    <div class="title">事件描述（ <span id="eventList_total">--</span> ）
+                    <div class="title">企业处理中事件（ <span id="eventList_total">--</span> ）
                         <a class="more" href="/main.html#/event">更多 ></a>
                     </div>
                     <div id="event_tip" class="tip">
-                        暂无事件信息
+                        最近什么都没有发生哟~
                     </div>
                     <!--<div class="line">
                             <div class="line_title">
@@ -363,7 +363,7 @@
     <script type="text/javascript" src="/src/js/event/ajaxFileUpload.js"></script>
     <script type="text/javascript" src="/lib/js/common_base.js"></script>
     <script type="text/javascript" src="/lib/js/bootstrap-datetimepicker.min.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=FaToVuVSNebaox7B0uLYEKhPH8Fpu7Rr"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=ggGUMM84vpa9GRP6HkOvt2H5UneQeXCQ&s=1"></script>
     <script type="text/javascript" src="/lib/js/amrnb.js"></script>
     <script type="text/javascript" src="/lib/js/amrnb-play.js"></script>
     <script type="text/javascript" src="/src/js/common/bootstrap.modal.alert.js"></script>
