--- a/src/html/loginSet.html
+++ b/src/html/loginSet.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-
+    <link href="/lib/css/bootstrap.css" rel="stylesheet">
     <link href="/src/css/loginSet.css" rel="stylesheet">
 </head>
 
@@ -85,7 +85,7 @@
                         <div class="right1 roleTs fl "><span class="required note_size" id="roleTs"></span></div>
                     </div>
                     <div class="btn3 quiteCreate "><input type="button " name=" " value="创建 " style="text-align:center"></div>
-                    <div class="note footer ">创建表示您同意<a href=" ">《服务协议》</a>和<a href=" ">《隐私政策》</a></div>
+                    <div class="note footer ">创建表示您同意<a href="/src/html/service.html" target="_blank">《服务协议》</a>和<a href="/src/html/private.html" target="_blank">《隐私政策》</a></div>
                 </div>
                 <div class="bottom4 bottom ">
                     <div class="finish "></div>
