--- a/src/html/task.html
+++ b/src/html/task.html
@@ -356,7 +356,7 @@
     <script type="text/javascript" src="/lib/js/bootstrap-table-zh-CN.min.js"></script>
     <script type="text/javascript" src="/lib/js/bootstrap-datetimepicker.min.js"></script>
     <script type="text/javascript" src="/lib/js/common_base.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=FaToVuVSNebaox7B0uLYEKhPH8Fpu7Rr"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=ggGUMM84vpa9GRP6HkOvt2H5UneQeXCQ&s=1"></script>
     <script type="text/javascript" src="/src/js/event/upload.js"></script>
     <script type="text/javascript" src="/src/js/event/ajaxFileUpload.js"></script>
     <script type="text/javascript" src="/src/js/common/html5-storage.js"></script>
@@ -366,6 +366,7 @@
     <script type="text/javascript" src="/src/js/common/drafting.js"></script>
     <script type="text/javascript" src="/src/js/common/common.js"></script>
     <script type="text/javascript" src="/src/js/common/dispose_common.js"></script>
+    <script type="text/javascript" src="/src/js/common/zhuge.js"></script>
     <script type="text/javascript" src="/src/js/task/task.js"></script>
 </body>
 <script>
