--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>巡线卫士</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>巡线卫士_互联网+管道_管道巡线_管线巡检_管线安全管理</title>
+    <meta name="description" content="巡线卫士是一款为管线安全生产管理提供支撑的移动应用软件，通过云端巡检、闭环管理和移动互联，能够实时监控巡检动态、优化巡检流程，从而提高管线管理工作的效率。">
+    <meta name="Keywords" content="管道,巡检,巡线,管线安全">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/favicon.ico" />
+</head>
+
+<body>
     <script src="lib/js/jquery-1.12.4.min.js"></script>
     <script src="src/js/common/html5-storage.js"></script>
     <script type="text/javascript">
-    $(document).ready(function(){
-         if(lsObj.getLocalStorage('token') != undefined && lsObj.getLocalStorage('token') != ""){
-               location.href = 'main.html';
-         }
-         else{
-               location.href = 'login.html';
-         }             
-    });
+        $(document).ready(function() {
+            if (lsObj.getLocalStorage('token') != undefined && lsObj.getLocalStorage('token') != "") {
+                location.href = 'main.html';
+            } else {
+                location.href = 'login.html';
+            }
+        });
     </script>
-    </body>
+</body>
+
 </html>
