--- a/src/html/event.html
+++ b/src/html/event.html
@@ -6,13 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-
     <link href="/lib/css/bootstrap.css" rel="stylesheet">
     <link href="/lib/css/bootstrap-table.css" rel="stylesheet">
     <link href="/lib/css/font-awesome.min.css" rel="stylesheet">
     <link href="/lib/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="/lib/css/zTreeStyle.css" rel="stylesheet">
-
     <link href="/src/css/common/search_table.css" rel="stylesheet">
     <link href="/src/css/details_common.css" rel="stylesheet">
     <link href="/src/css/event.css" rel="stylesheet">
@@ -34,7 +32,6 @@
             </div>
         </div>
         <!--/地图-->
-
         <div class="wrapper-main">
             <!--高级搜索-->
             <div class="container-fluid search_item_wrapper">
@@ -65,7 +62,6 @@
                                 </div>
                                 <span class="mybtn" id="gf_Btn">确定</span>
                             </div>
-
                         </div>
                     </div>
                     <div class="more_item_wrapper">
@@ -406,7 +402,7 @@
     <script type="text/javascript" src="/lib/js/bootstrap-datetimepicker.min.js"></script>
     <!--<script type="text/javascript" src="/lib/js/bootstrap-modal.js"></script>-->
     <script type="text/javascript" src="/lib/js/common_base.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=FaToVuVSNebaox7B0uLYEKhPH8Fpu7Rr"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=ggGUMM84vpa9GRP6HkOvt2H5UneQeXCQ&s=1"></script>
     <script type="text/javascript" src="/src/js/event/upload.js"></script>
     <script type="text/javascript" src="/src/js/event/ajaxFileUpload.js"></script>
     <script type="text/javascript" src="/src/js/common/html5-storage.js"></script>
@@ -414,6 +410,7 @@
     <script type="text/javascript" src="/src/js/common/drafting.js"></script>
     <script type="text/javascript" src="/src/js/common/common.js"></script>
     <script type="text/javascript" src="/src/js/common/details_common.js"></script>
+    <script type="text/javascript" src="/src/js/common/zhuge.js"></script>
     <script type="text/javascript" src="/src/js/event/event.js"></script>
 </body>
 
