--- a/src/html/personal.html
+++ b/src/html/personal.html
@@ -37,7 +37,7 @@
                                 <div class="row">
                                     <div class="col-md-4 text-right userdes">年龄：</div>
                                     <div class="col-md-5">
-                                        <input type="text" class="form-control" id="age">
+                                        <input type="text" class="form-control" id="age" placeholder="请输入年龄">
                                     </div>
                                     <div class="col-md-3 text-left note" id="agenote"></div>
                                 </div>
@@ -92,7 +92,6 @@
                             <div class="row">
                                 <div class="col-md-4 text-right userdes">职位：</div>
                                 <div class="col-md-5 userdes" id="position">
-                                    巡检员
                                 </div>
                                 <div class="col-md-3"></div>
                             </div>
