0324 Signed-off-by: gaofeng <gaofeng3695@126.com>

--- a/login.html
+++ b/login.html
@@ -46,7 +46,8 @@
     <script src="/src/js/common/md5.js"></script>
     <script src="/src/js/common/html5-storage.js"></script>
     <script src="/src/js/common/zhuge.js"></script>
-    <script src="/src/js/login/login.js"></script>
+    <!--<script src="/src/js/login/login.js"></script>-->
+    <script src="/demo/login01.js"></script>
     <script>
     </script>
 </body>
