--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
     <link href="/lib/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="/lib/css/zTreeStyle.css" rel="stylesheet">
     <link href="/src/css/index.css" rel="stylesheet">
+    <link href="/src/css/common/view.pic.css" rel="stylesheet">
     <link href="/src/css/dispose_common.css" rel="stylesheet">
     <link href="/src/css/details_common.css" rel="stylesheet">
 </head>
@@ -342,6 +343,7 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-2 text-right details_title">照片</div>
                                 <div class="col-md-10 details_text  col-sm-10 event_pic">
+                                    <ul></ul>
                                 </div>
                             </div>
                         </div>
@@ -369,6 +371,7 @@
     <script type="text/javascript" src="/src/js/common/bootstrap.modal.alert.js"></script>
     <script src="/src/js/common/common.js"></script>
     <script src="/src/js/common/html5-storage.js"></script>
+    <script type="text/javascript" src="/src/js/common/view.pic.js"></script>
     <script src="/src/js/common/dispose_common.js"></script>
     <script src="/src/js/common/details_common.js"></script>
     <script src="/src/js/index.js"></script>
