--- a/src/html/event.html
+++ b/src/html/event.html
@@ -12,6 +12,8 @@
     <link href="/lib/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="/lib/css/zTreeStyle.css" rel="stylesheet">
     <link href="/src/css/common/search_table.css" rel="stylesheet">
+
+    <link href="/src/css/common/view.pic.css" rel="stylesheet">
     <link href="/src/css/details_common.css" rel="stylesheet">
     <link href="/src/css/event.css" rel="stylesheet">
 </head>
@@ -219,6 +221,7 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-2 text-right details_title">照片</div>
                                 <div class="col-md-10 details_text  col-sm-10 event_pic">
+                                    <ul></ul>
                                 </div>
                             </div>
                         </div>
@@ -392,6 +395,7 @@
             </div>
         </div>
     </div>
+
     <script type="text/javascript" src="/lib/js/amrnb.js"></script>
     <script type="text/javascript" src="/lib/js/amrnb-play.js"></script>
     <script type="text/javascript" src="/lib/js/jquery-1.12.4.min.js"></script>
@@ -412,6 +416,7 @@
     <script type="text/javascript" src="/src/js/common/details_common.js"></script>
     <script type="text/javascript" src="/src/js/common/zhuge.js"></script>
     <script type="text/javascript" src="/src/js/event/event.js"></script>
+    <script type="text/javascript" src="/src/js/common/view.pic.js"></script>
 </body>
 
 </html>
