--- a/src/html/map.html
+++ b/src/html/map.html
@@ -8,6 +8,7 @@
     <link href="/lib/css/bootstrap.css" rel="stylesheet">
     <link href="/lib/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="/src/css/map.css" rel="stylesheet">
+    <link href="/src/css/common/view.pic.css" rel="stylesheet">
     <link href="/src/css/map_test.css" rel="stylesheet">
     <link href="/src/css/task.css" rel="stylesheet">
     <link href="/src/css/jquery.mCustomScrollbar.css" rel="stylesheet" />
@@ -381,6 +382,7 @@
                     </div>
                 </div>
                 <div class="event_tab eventpic_list">
+                    <ul></ul>
                 </div>
             </div>
             <div class="view_detail">
@@ -433,6 +435,7 @@
                                 <div class="row">
                                     <div class="col-md-2 col-sm-2 text-right details_title">照片</div>
                                     <div class="col-md-10 details_text  col-sm-10 event_pic">
+                                        <ul></ul>
                                     </div>
                                 </div>
                             </div>
@@ -470,6 +473,7 @@
     <script src="/src/js/common/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="/src/js/common/bootstrap.modal.alert.js"></script>
     <script src="/src/js/common/mapObj.js"></script>
+    <script type="text/javascript" src="/src/js/common/view.pic.js"></script>
     <script src="/src/js/map.js"></script>
     <script src="/src/js/map/map1.js"></script>
     <script>
