--- a/src/html/task.html
+++ b/src/html/task.html
@@ -14,7 +14,7 @@
     <link href="/lib/css/zTreeStyle.css" rel="stylesheet">
     <link href="/lib/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="/src/css/common/search_table.css" rel="stylesheet">
-
+    <link href="/src/css/common/view.pic.css" rel="stylesheet">
     <link href="/src/css/dispose_common.css" rel="stylesheet">
     <link href="/src/css/task.css" rel="stylesheet">
 </head>
@@ -218,6 +218,7 @@
                                 <div class="row">
                                     <div class="col-md-2 col-sm-2 text-right details_title">照片</div>
                                     <div class="col-md-10 details_text  col-sm-10 event_pic">
+                                        <ul></ul>
                                     </div>
                                 </div>
                             </div>
@@ -365,6 +366,7 @@
 
     <script type="text/javascript" src="/src/js/common/drafting.js"></script>
     <script type="text/javascript" src="/src/js/common/common.js"></script>
+    <script type="text/javascript" src="/src/js/common/view.pic.js"></script>
     <script type="text/javascript" src="/src/js/common/dispose_common.js"></script>
     <script type="text/javascript" src="/src/js/common/zhuge.js"></script>
     <script type="text/javascript" src="/src/js/task/task.js"></script>
